<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_menu_service"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_menu_clients"
            android:title="@string/menu_clients" />

    </group>

    <item android:title="@string/menu_category">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
